Adjust spacing issue for header and adjust callback function position in handleDOMContentLoaded function.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ header {
   color: #fff;
 }
 
+.heading {
+  padding: 0 12px;
+}
+
 .row > input {
   width: 100%;
   height: 2rem;
@@ -55,10 +59,6 @@ a {
   margin: 1rem;
   font-size: 1.2rem;
   cursor: pointer;
-}
-
-.header > h1 {
-  padding: 0.75rem;
 }
 
 .split-row {
